# ecen625_student

./: .gitignore  .gitmodules  .travis.yml  README.md
.github/workflows/: main.yml
asst1/src/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
asst1/src/niGraph/: NIGraph.cpp  NIGraph.h  NIGraphEdge.cpp  NIGraphEdge.h  NIGraphNode.h
asst1/src/niGraphReader/: NIGraphReader.cpp  NIGraphReader.h
asst1/src/rapidxml-1.13/: CMakeLists.txt
benchmarks/: Makefile.common
benchmarks/shared_add_tree/: Makefile  simple.c
benchmarks/simple/: simple.c
benchmarks/simple_unrolled/: simple.c
benchmarks/simple_unrolled_partitioned/: simple.c
lab_0/doc/: asst_0.tex
lab_graphs/: Makefile
lab_graphs/doc/: lab_graphs.tex
lab_graphs/src/: CMakeLists.txt  main.cpp  solution.h  utils.cpp  utils.h
lab_graphs/src/niGraph/: CMakeLists.txt  NIGraph.cpp  NIGraph.h  NIGraphEdge.cpp  NIGraphEdge.h  NIGraphNode.cpp
lab_graphs/src/niGraphReader/: CMakeLists.txt  NIGraphReader.cpp  NIGraphReader.h
lab_llvm/src/: AdderTreeBalancer.cpp  AdderTreeBalancer.h  CMakeLists.txt
lab_scheduling/benchmarks/: Makefile.common
lab_scheduling/benchmarks/simple/: Makefile
lab_scheduling/src/: CMakeLists.txt  FunctionHLS.cpp  FunctionHLS.h  FunctionalUnit.cpp  FunctionalUnit.h  InstructionHLS.cpp  InstructionHLS.h  SchedHelper.cpp  SchedHelper.h  Scheduler625.cpp  Scheduler625.h  Scheduler625soln.cpp
lab_vitis/hls/: test_data.h  training_data.h  typedefs.h
lab_vitis/hls/digitrec_global/: digitrec.h  digitrec_test.cpp  hls_config.cfg
lab_vitis/hls/digitrec_local/: Makefile  digitrec.h  digitrec_test.cpp  hls_config.cfg
lab_vitis/hls/mm2s/: Makefile  hls_config.cfg  mm2s.h
lab_vitis/program/: run_elf.tcl  run_elf_on_pynq_board.py
lab_vitis/sw/: main.cpp
lab_vitis_hls/: .gitignore  Makefile  digitrec.cpp  digitrec_test.cpp  hls_config.cfg.in  run.tcl  test_data.h  training_data.h
lab_vitis_hls/script/: collect_result.tcl
lab_vitis_hls/scripts/: collect_results.py
lab_vivado_hls/: run.tcl
lab_vivado_hls/script/: collect_result.tcl
